--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,13 +26,27 @@ jobs:
   # Define one or more jobs which will utilize your orb's commands and parameters to validate your changes.
   integration-test-1:
     docker:
-      - image: cimg/base:stable
+      - image: makepress-orb/rust
     steps:
       - checkout
       # "greet" is a sample command packaged with this orb config.
       # This sample integration test will run as long as the greet command exists. Once you remove the greet command you should remove this line.
       # Push new changes first, before adding new tests to your config.
-      - makepress-orb/greet
+      - run:
+          command: |
+            {
+              echo '[toolchain]'
+              echo 'channel = "1.56.0"'
+              echo 'components = [ "rustfmt", "clippy" ]'
+            } >> rust-toolchain.toml
+      - makepress-orb/with-rust:
+          steps:
+            - run:
+                command: |
+                  cargo --version
+                  cargo new hello
+                  cd hello
+                  cargo run
 
 workflows:
   # Prior to producing a development orb (which requires credentials) basic validation, linting, and even unit testing can be performed.
