--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ parameters:
 jobs:
   # Define one or more jobs which will utilize your orb's commands and parameters to validate your changes.
   integration-test-1:
-    docker:
-      - image: makepress-orb/rust
+    executor: makepress-orb/rust
     steps:
       - checkout
       # "greet" is a sample command packaged with this orb config.
