--- a/src/examples/example.yml
+++ b/src/examples/example.yml
@@ -1,7 +1,11 @@
-version: "2.1"
-orbs:
-  <orb-name>: <namespace>/<orb-name>@1.2.3
-workflows:
-  use-my-orb:
-    jobs:
-      - <orb-name>/<job-name>
+description: >
+  A basic example
+
+usage:
+  version: "2.1"
+  orbs:
+    <orb-name>: <namespace>/<orb-name>@1.2.3
+  workflows:
+    use-my-orb:
+      jobs:
+        - <orb-name>/<job-name>
