[semver:major] Add AWS context to intergration test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,8 @@ workflows:
     when: << pipeline.parameters.run-integration-tests >>
     jobs:
       # Run any integration tests defined within the `jobs` key.
-      - integration-test-1
+      - integration-test-1:
+          context: aws
       # Publish a semver version of the orb. relies on
       # the commit subject containing the text "[semver:patch|minor|major|skip]"
       # as that will determine whether a patch, minor or major
@@ -95,7 +96,9 @@ workflows:
       # e.g. [semver:patch] will cause a patch version to be published.
       - orb-tools/dev-promote-prod-from-commit-subject:
           orb-name: makepress/makepress-orb
-          context: orb-publishing
+          context:
+            - orb-publishing
+            - aws
           add-pr-comment: false
           fail-if-semver-not-indicated: true
           publish-version-tag: false
