[semver:major] Change renovate excutor image

--- a/src/executors/renovate.yml
+++ b/src/executors/renovate.yml
@@ -1,4 +1,4 @@
 description: |
   Default Renovate Executor
 docker:
-  - image: "545642868320.dkr.ecr.eu-west-2.amazonaws.com/makepress-renovate:latest"
+  - image: "renovate/renovate:28.10.3-slim"
