--- a/src/commands/with-rust.yml
+++ b/src/commands/with-rust.yml
@@ -11,7 +11,7 @@ parameters:
   sccache-region:
     type: string
     description: S3 region the bucket is in
-    default: eu-west-1
+    default: us-east-1
 steps:
   - run:
       name: Start sccache and configure rust
