--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   # Replace this with your own!
-  makepress-orb: makepress/makepress-orb@<<pipeline.parameters.dev-orb-version>>
+  rust: yuiyukihira/rust@<<pipeline.parameters.dev-orb-version>>
   orb-tools: circleci/orb-tools@10.0
   bats: circleci/bats@1.0
   shellcheck: circleci/shellcheck@2.0
@@ -25,7 +25,7 @@ parameters:
 jobs:
   # Define one or more jobs which will utilize your orb's commands and parameters to validate your changes.
   integration-test-1:
-    executor: makepress-orb/rust
+    executor: rust/rust
     steps:
       - checkout
       - run:
@@ -60,7 +60,7 @@ workflows:
           path: ./src/tests
       # Publish development version(s) of the orb.
       - orb-tools/publish-dev:
-          orb-name: makepress/makepress-orb
+          orb-name: yuiyukihira/rust
           context: orb-publishing # A restricted context containing your private publishing credentials. Will only execute if approved by an authorized user.
           requires:
             - orb-tools/lint
@@ -83,8 +83,7 @@ workflows:
     when: << pipeline.parameters.run-integration-tests >>
     jobs:
       # Run any integration tests defined within the `jobs` key.
-      - integration-test-1:
-          context: aws
+      - integration-test-1
       # Publish a semver version of the orb. relies on
       # the commit subject containing the text "[semver:patch|minor|major|skip]"
       # as that will determine whether a patch, minor or major
@@ -92,10 +91,9 @@ workflows:
       # be skipped.
       # e.g. [semver:patch] will cause a patch version to be published.
       - orb-tools/dev-promote-prod-from-commit-subject:
-          orb-name: makepress/makepress-orb
+          orb-name: yuiyukihira/rust
           context:
             - orb-publishing
-            - aws
           add-pr-comment: false
           fail-if-semver-not-indicated: true
           publish-version-tag: false
