--- a/src/executors/rust.yml
+++ b/src/executors/rust.yml
@@ -1,4 +1,4 @@
 description: >
   Default Rust Executor
 docker:
-  - image: "545642868320.dkr.ecr.us-east-1.amazonaws.com/makepress-rust:latest"
+  - image: "ghcr.io/yuiyukihira/rust:latest"
